cleaned up command line args